[package]
name = "gzcsv"
version = "0.1.0"
authors = ["Mike Cooper <mythmon@gmail.com>"]

[dependencies]
csv = "1.0.0-beta.5"
flate2 = { version = "*", features = ["zlib"], default-features = false }
serde = "*"
serde_derive = "*"
chrono = { version = "*", features = ["serde"] }
scoped_threadpool = "*"
rayon = "*"
nom = "3.2.1"

[[bin]]
name = "single_threaded"
path = "src/single_threaded.rs"

[[bin]]
name = "rayon"
path = "src/rayon.rs"

[profile.release]
debug = true
lto = true
